added binarywave files

--- a/examples/fermi_edge/fermi_edge_example.Rmd
+++ b/examples/fermi_edge/fermi_edge_example.Rmd
@@ -20,8 +20,8 @@ jupyter:
 # %autoreload 2
 import numpy as np
 import matplotlib.pyplot as plt
-from igor2 import binarywave
 from exubi import band_map
+from exubi import binarywave
 from exubi.plotting import my_settings
 from exubi.distributions import fermi_dirac
 
