Rename code xARPES

--- a/examples/fermi_edge/fermi_edge_example.Rmd
+++ b/examples/fermi_edge/fermi_edge_example.Rmd
@@ -19,12 +19,12 @@ jupyter:
 # %load_ext autoreload
 # %autoreload 2
 
-import exubi
+import xarpes
 import numpy as np
 import matplotlib.pyplot as plt
 from igor2 import binarywave
 
-exubi.my_plot_settings("default")
+xarpes.my_plot_settings("default")
 ```
 
 ```{python}
@@ -47,7 +47,7 @@ ekin = np.linspace(fmin, fmin+(fnum-1)*fstp, fnum)
 ```
 
 ```{python}
-fdir = exubi.fermi_dirac(mu=31.7, temperature=20, background=100, integrated_weight=1000, \
+fdir = xarpes.fermi_dirac(mu=31.7, temperature=20, background=100, integrated_weight=1000, \
         name="test_distribution")
 
 fig = plt.figure(figsize=(6, 5))
@@ -63,7 +63,7 @@ plt.close()
 fig = plt.figure(figsize=(6, 5))
 ax = fig.gca()
 
-bmap = exubi.band_map(intensities=intn, angles=angl, ekin=ekin, energy_resolution=0.01, temperature=80)
+bmap = xarpes.band_map(intensities=intn, angles=angl, ekin=ekin, energy_resolution=0.01, temperature=80)
 
 fig = bmap.fit_fermi_edge(mu_guess=32, background_guess=1e5, integrated_weight_guess=1.5e6, \
                           angle_min=-10, angle_max=10, ekin_min=31.9, ekin_max = 32.1, \
