changed mu to hnuminphi

--- a/examples/fermi_edge/fermi_edge_example.Rmd
+++ b/examples/fermi_edge/fermi_edge_example.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.16.1
+      jupytext_version: 1.16.2
   kernelspec:
     display_name: Python 3 (ipykernel)
     language: python
@@ -47,7 +47,7 @@ ekin = np.linspace(fmin, fmin+(fnum-1)*fstp, fnum)
 ```
 
 ```{python}
-fdir = xarpes.fermi_dirac(mu=31.7, temperature=20, background=100, integrated_weight=1000, \
+fdir = xarpes.fermi_dirac(hnuminphi=31.7, temperature=20, background=100, integrated_weight=1000, \
         name="test_distribution")
 
 fig = plt.figure(figsize=(6, 5))
@@ -65,9 +65,9 @@ ax = fig.gca()
 
 bmap = xarpes.band_map(intensities=intn, angles=angl, ekin=ekin, energy_resolution=0.01, temperature=80)
 
-fig = bmap.fit_fermi_edge(mu_guess=32, background_guess=1e5, integrated_weight_guess=1.5e6, \
+fig = bmap.fit_fermi_edge(hnuminphi_guess=32, background_guess=1e5, integrated_weight_guess=1.5e6, \
                           angle_min=-10, angle_max=10, ekin_min=31.9, ekin_max = 32.1, \
                           ax=ax, savefig="edge_fit.png", show=True, title="Fermi edge fit")
 
-print("The optimised μ=" + f"{bmap.mu:.3f}" + " eV.")
+print("The optimised h nu - phi=" + f"{bmap.hnuminphi:.4f}" + " eV.")
 ```
