--- a/examples/graphene/linear_fitting.Rmd
+++ b/examples/graphene/linear_fitting.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.15.2
+      jupytext_version: 1.16.2
   kernelspec:
     display_name: Python 3 (ipykernel)
     language: python
@@ -63,7 +63,8 @@ fig = bmap.fit_fermi_edge(hnuminphi_guess=32, background_guess=1e5,
                           ax=ax, savefig='edge_fit.png', show=True,
                           title='Fermi edge fit')
 
-print('The optimised h nu - phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- ' + f'{bmap.hnuminphi_std:.4f}' + ' eV.')
+print('The optimised h nu - phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
+      + f'{bmap.hnuminphi_std:.4f}' + ' eV.')
 ```
 
 ```{python}
