--- a/examples/graphene/linear_fitting.Rmd
+++ b/examples/graphene/linear_fitting.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.16.2
+      jupytext_version: 1.15.2
   kernelspec:
     display_name: Python 3 (ipykernel)
     language: python
@@ -29,11 +29,22 @@ xarpes.plot_settings('default')
 ```
 
 ```{python}
-script_dir = os.path.dirname(os.path.abspath(__file__))
-dfld = 'data_sets' # Folder containing the data
-flnm = 'graphene_raw_101' # Name of the file
-extn = '.ibw' # Extension of the file
-tmpr = 80 # Data temperature [K]
+try:
+    # This block checks if the script is running in an IPython environment
+    cfg = get_ipython().config
+    script_dir = os.getcwd()
+except:
+    try:
+        # This should work if we're running as a standalone script and __file__ is defined
+        script_dir = os.path.dirname(os.path.abspath(__file__))
+    except NameError:
+        # If __file__ isn't defined, fall back to the current working directory (less reliable)
+        script_dir = os.getcwd()
+
+dfld = 'data_sets'  # Folder containing the data
+flnm = 'graphene_raw_101'  # Name of the file
+extn = '.ibw'  # Extension of the file
+tmpr = 80  # Data temperature [K]
 
 data_file_path = os.path.join(script_dir, dfld, flnm + extn)
 data = binarywave.load(data_file_path)
