Angle resolution bug fix, prettified

--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -65,14 +65,10 @@ bmap = xarpes.band_map(intensities=intn, angles=angl, ekin=ekin,
 fig = bmap.fit_fermi_edge(hnuminphi_guess=32, background_guess=1e5,
                           integrated_weight_guess=1.5e6, angle_min=-10,
                           angle_max=10, ekin_min=31.9, ekin_max=32.1,
-                          ax=ax, show=False, title='Fermi edge fit')
+                          ax=ax, show=True, title='Fermi edge fit')
 
 print('The optimised h nu - phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
       + f'{bmap.hnuminphi_std:.4f}' + ' eV.')
-```
-
-```{python}
-fig = bmap.plot()
 ```
 
 ```{python}
@@ -90,6 +86,10 @@ fig = mdcs.plot(ax=ax, show=True)
 ```
 
 ```{python}
+fig = bmap.plot(ordinate='binding_energy', abscissa='angle')
+```
+
+```{python}
 angle_min = 0
 angle_max = 1e6
 en_val = 0
@@ -100,11 +100,15 @@ new_range = mdcs.angles
 fig = plt.figure(figsize=(7, 5))
 ax = fig.gca()
 
-line1 = xarpes.spectral_linear(amplitude=500, peak=7.5, broadening=0.01, name="Linear test", index="1")
-line2 = xarpes.spectral_linear(amplitude=600, peak=5.5, broadening=0.02, name="Linear test", index="2")
+line1 = xarpes.spectral_linear(amplitude=500, peak=7.5, broadening=0.01, 
+                               name="Linear test", index="1")
+line2 = xarpes.spectral_linear(amplitude=600, peak=5.5, broadening=0.02, 
+                               name="Linear test", index="2")
 
-line1.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False, fig_close=False)
-line2.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False, fig_close=False)
+line1.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False, 
+           fig_close=False)
+line2.plot(angle_range=new_range, angle_resolution=0.1, ax=ax, show=False, 
+           fig_close=False)
 fig = mdcs.plot(ax=ax)
 ```
 
@@ -114,10 +118,12 @@ ax = fig.gca()
 
 guess_dists = xarpes.create_distributions([
 xarpes.linear(offset=3.0e3, slope=-100),
-xarpes.spectral_linear(amplitude=450, peak=7.4, broadening=0.012, name='Linear_test', index='1'),
-xarpes.spectral_linear(amplitude=60, peak=4.2, broadening=0.018, name='Linear_test', index='2'),
-# xarpes.spectral_quadratic(amplitude=20, peak=4.5, center_wavevector=0, broadening=0.005, 
-#                        side='right', name='Quadratic_test', index='1')
+xarpes.spectral_linear(amplitude=450, peak=7.4, broadening=0.012, 
+                       name='Linear_test', index='1'),
+xarpes.spectral_linear(amplitude=60, peak=4.2, broadening=0.018, 
+                       name='Linear_test', index='2'),
+# xarpes.spectral_quadratic(amplitude=20, peak=4.5, center_wavevector=0, 
+#    broadening=0.005, side='right', name='Quadratic_test', index='1')
 ])
 
 fig = mdcs.visualize_guess(distributions=guess_dists, ax=ax, show=True)
@@ -127,13 +133,19 @@ fig = mdcs.visualize_guess(distributions=guess_dists, ax=ax, show=True)
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
-fig, new_distributions, covariance_matrix = mdcs.fit(distributions=guess_dists, ax=ax, show=False)
+fig, new_distributions, covariance_matrix = mdcs.fit(\
+     distributions=guess_dists, ax=ax, show=True)
 ```
 
 ```{python}
-change = xarpes.spectral_linear(amplitude=500, peak=7.5, broadening=0.01, name="Linear_test", index="1")
+change = xarpes.spectral_linear(amplitude=500, peak=7.5, broadening=0.01,
+                                name="Linear_test", index="1")
 
 change.broadening = 0.02
 
 print(change.broadening)
+```
+
+```{python}
+
 ```
