--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -13,7 +13,8 @@ jupyter:
 ---
 
 # SrTiO$_3$ example
-### In this example, we extract the self-energies and Eliashberg function from a 2DEL in the d_{xy} bands on the TiO$_2$-terminated surface of SrTiO$_3$.
+### In this example, we extract the self-energies and Eliashberg function from
+### a 2DEL in the d$_{xy}$ bands on the TiO$_2$-terminated surface of SrTiO$_3$.
 
 ```{python}
 # %load_ext autoreload
@@ -51,7 +52,7 @@ ekin = np.linspace(fmin, fmin + (fnum - 1) * fstp, fnum)
 ```
 
 ```{python}
-fig = plt.figure(figsize=(6, 5))
+fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
 bmap = xarpes.band_map(intensities=intn, angles=angl, ekin=ekin,
@@ -85,33 +86,46 @@ fig = mdcs.plot(ax=ax)
 ```
 
 ```{python}
-import importlib
-importlib.reload(xarpes)
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
 
 k_0 = 0.03
+theta_0 = 0.6
+dtor = np.pi/180
 
 guess_dists = xarpes.create_distributions([
 xarpes.constant(offset=600),
-xarpes.spectral_linear(amplitude=3000, peak=2.4, broadening=0.0001, name='Faint_band', index='1'),
-xarpes.spectral_quadratic(amplitude=3800, peak=2.45, broadening=0.00024, center_wavevector=k_0,
-                          side='right', name='Inner_band', index='2'),
-xarpes.spectral_quadratic(amplitude=1800, peak=3.6, broadening=0.0004, center_wavevector=k_0,
-                          side='right', name='Outer_band', index='3')
-])
+xarpes.spectral_linear(amplitude=3000, peak=2.4, broadening=0.0001, 
+                       name='Faint_band', index='1'),
+    
 
-theta_0 = 0.6
-dtor = np.pi/180
+xarpes.spectral_quadratic(amplitude=3800, peak=2.45, broadening=0.00024, 
+            center_wavevector=k_0, side='right', name='Inner_band', index='2'),
+    
+    
+xarpes.spectral_quadratic(amplitude=1800, peak=3.6, broadening=0.0004, 
+            center_wavevector=k_0, side='right', name='Outer_band', index='3')
+])
 
 mat_el = lambda x: np.sin((x-theta_0)*dtor)**2
 
 mat_args = {
-# 'theta_0' : 0.6,
+#  'theta_0' : 0.6
 }
 
-fig = mdcs.visualize_guess(distributions=guess_dists, matrix_element=mat_el, matrix_args=mat_args)
+fig = mdcs.visualize_guess(distributions=guess_dists, matrix_element=mat_el, 
+                           ax=ax, matrix_args=mat_args)
 ```
 
 ```{python}
-fig, new_dists, covariance_matrix, new_mat_args = mdcs.fit(distributions=guess_dists,
-                        matrix_element=mat_el, matrix_args=mat_args, show=True)
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
+
+fig, new_dists, covariance_matrix, new_mat_args = mdcs.fit(
+    distributions=guess_dists, matrix_element=mat_el, matrix_args=mat_args, 
+    ax=ax, show=True)
+```
+
+```{python}
+
 ```
