--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -30,11 +30,6 @@ import matplotlib.pyplot as plt
 import os
 
 xarpes.plot_settings('default')
-
-# Making an inoccuous change here
-
-# Another change here
-# Next change
 ```
 
 ```{python}
@@ -80,7 +75,7 @@ plt.show()
 print('The optimised hnu - Phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
       + f'{1.96 * bmap.hnuminphi_std:.5f}' + ' eV.')
 
-# fig = bmap.plot(ordinate='kinetic_energy', abscissa='angle')
+fig = bmap.plot(ordinate='kinetic_energy', abscissa='angle')
 ```
 
 ```{python}
@@ -168,6 +163,30 @@ fig, new_distributions, covariance_matrix = mdcs.fit(
 ```
 
 ```{python}
+angle_min = 0
+angle_max = 1e6
+
+energy_range = [-0.1, 0.01]
+
+mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
+```
+
+```{python}
+# %matplotlib widget
+
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
+
+energy_range = [-0.01, 0.01]
+
+energy_value = 0.01
+
+mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
+
+fig = mdcs.fit_all(distributions=guess_dists, ax=ax)
+```
+
+```{python}
 # change = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
 #                                name='Linear_test', index='1')
 
@@ -200,11 +219,9 @@ fig, new_distributions, covariance_matrix = mdcs.fit(
 angle_min = 0
 angle_max = 1e6
 
-energy_range = [-0.2, 0.01]
+energy_range = [-0.05, 0]
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
-
-# new_range = mdcs.angles
 
 # %matplotlib widget
 
