Added constants.py, specify %matplotlib everywhere

--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -23,8 +23,6 @@ jupyter:
 # %load_ext autoreload
 # %autoreload 2
 
-# %matplotlib inline
-
 import xarpes
 import matplotlib.pyplot as plt
 import os
@@ -43,6 +41,8 @@ data_file_path = os.path.join(script_dir, dfld, flnm + extn)
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
@@ -55,6 +55,8 @@ fig = bmap.plot(abscissa='angle', ordinate='kinetic_energy', ax=ax)
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig, ax = plt.subplots(2, 1, figsize=(6, 8))
 
 fig = bmap.correct_fermi_edge(
@@ -79,6 +81,8 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(6, 5))
 ax = fig.gca()
 
@@ -92,6 +96,8 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminphi:.4f}' + ' +/- '
 ```
 
 ```{python}
+# %matplotlib inline
+
 angle_min = 0.1
 angle_max = 1e6
 en_val = 0
@@ -103,6 +109,10 @@ fig = plt.figure(figsize=(6, 5))
 ax = fig.gca()
 
 fig = mdcs.plot(ax=ax)
+
+# Subsequent plot customization
+# ax.set_xlim([2, 10])
+# ax.set_ylim([0, 10000])
 
 # change = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
 #                                name='Linear_test', index='1')
@@ -138,6 +148,8 @@ fig = mdc.plot(ax=ax)
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
@@ -153,6 +165,8 @@ fig = mdc.visualize_guess(distributions=guess_dists, ax=ax, show=True)
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
@@ -167,9 +181,7 @@ angle_max = 1e6
 energy_range = [-0.1, 0.01]
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
-```
 
-```{python}
 guess_dists = xarpes.CreateDistributions([
 xarpes.Linear(offset=3.0e3, slope=-100),
 xarpes.SpectralLinear(amplitude=450, peak=7.4, broadening=0.012,
@@ -180,6 +192,8 @@ xarpes.SpectralQuadratic(amplitude=20, peak=4.5, center_wavevector=0,
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
@@ -187,6 +201,8 @@ fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=0, ax=ax)
 ```
 
 ```{python}
+# %matplotlib inline
+
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
@@ -195,19 +211,17 @@ fig, new_distributions, covariance_matrix = mdcs.fit(
 ```
 
 ```{python}
-# %matplotlib inline
+# %matplotlib widget
 
-fig = plt.figure(figsize=(7, 5))
+fig = plt.figure(figsize=(9, 7))
 ax = fig.gca()
 
-energy_range = [-0.005, 0.01]
+energy_range = [-0.005, 0.015]
 energy_value = 0.01
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
-fig = mdcs.fit_selection(distributions=guess_dists, ax=ax, energy_value=-0.003)
-
-
+fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
 ```
 
 ```{python}
@@ -217,20 +231,6 @@ fig = plt.figure(figsize=(7, 5))
 ax = fig.gca()
 
 fig = mdcs.plot(distributions=guess_dists, ax=ax, energy_value=-0.003)
-```
-
-```{python}
-# %matplotlib widget
-
-fig = plt.figure(figsize=(7, 5))
-ax = fig.gca()
-
-energy_range = [-0.005, 0.01]
-energy_value = 0.01
-
-mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
-
-fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
 ```
 
 ```{python}
