--- a/examples/srtio3/srtio3.Rmd
+++ b/examples/srtio3/srtio3.Rmd
@@ -127,7 +127,7 @@ fig, new_dists, covariance_matrix, new_mat_args = mdc.fit(
 ```{python}
 # %matplotlib widget
 
-energy_range = [-0.2, 0.01]
+energy_range = [-0.1, 0.01]
 
 angle_min = 0.6
 angle_max = 4.8
@@ -137,10 +137,7 @@ mdc = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range)
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
-# mdc.plot(angle_range=mdc.angles, angle_resolution=0.2, ax=ax, show=False,
-#            fig_close=False)
-
-fig = mdc.plot(ax=ax)
+fig = mdc.plot(angle_range=mdc.angles, angle_resolution=0.2, ax=ax)
 ```
 
 ```{python}
@@ -151,7 +148,55 @@ ax = fig.gca()
 
 fig, new_dists, covariance_matrix, new_mat_args = mdc.fit(
     distributions=guess_dists, matrix_element=mat_el, matrix_args=mat_args,
-    energy_value=0, ax=ax, show=True)
+    energy_value=0, ax=ax)
+```
+
+```{python}
+# %matplotlib inline
+
+guess_dists = xarpes.CreateDistributions([
+xarpes.Constant(offset=600),
+
+xarpes.SpectralQuadratic(amplitude=3800, peak=2.45, broadening=0.00024,
+            center_wavevector=k_0, name='Inner_band', index='1'),
+
+xarpes.SpectralQuadratic(amplitude=1800, peak=3.6, broadening=0.0004,
+            center_wavevector=k_0, name='Outer_band', index='2')
+])
+
+mat_el = lambda x: np.sin((x - theta_0) * dtor) ** 2
+
+mat_args = {}
+
+energy_range = [-0.1, 0.003]
+angle_min = 0.6
+angle_max = 4.8
+
+mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
+
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
+
+fig = mdcs.visualize_guess(distributions=guess_dists, matrix_element=mat_el,
+                           ax=ax, matrix_args=mat_args, energy_value=0)
+```
+
+```{python}
+# %matplotlib widget
+
+fig = plt.figure(figsize=(7, 5))
+ax = fig.gca()
+
+fig = mdcs.fit_selection(distributions=guess_dists, matrix_element=mat_el, 
+                         matrix_args=mat_args, ax=ax)
+```
+
+```{python}
+# %matplotlib inline
+
+self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Inner_band_1',
+                                fermi_velocity=2.85, fermi_wavevector=0.358))
+
 ```
 
 ```{python}
