Start MDC fitting at top; peak position errors

--- a/examples/graphene/graphene.Rmd
+++ b/examples/graphene/graphene.Rmd
@@ -111,14 +111,12 @@ ax = fig.gca()
 fig = mdcs.plot(ax=ax)
 
 # Subsequent plot customization
-# ax.set_xlim([2, 10])
-# ax.set_ylim([0, 10000])
+# ax.set_xlim([2, 10]); # ax.set_ylim([0, 10000])
 
 # change = xarpes.SpectralLinear(amplitude=500, peak=7.5, broadening=0.01,
 #                                name='Linear_test', index='1')
 
 # change.broadening = 0.02
-
 # print(change.broadening)
 ```
 
@@ -225,15 +223,6 @@ fig = mdcs.fit_selection(distributions=guess_dists, ax=ax)
 ```
 
 ```{python}
-# %matplotlib widget
-
-fig = plt.figure(figsize=(7, 5))
-ax = fig.gca()
-
-fig = mdc2.fit_selection(distributions=guess_dists2, show=False, fig_close=True)
-```
-
-```{python}
 # %matplotlib inline
 
 self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_test_1',
@@ -251,13 +240,9 @@ ax.errorbar(self_energy.enel_range, self_energy.imag,
             yerr=stdv * self_energy.imag_sigma, label =r"$-\Sigma''(E)$")
 ax.errorbar(self_energy.enel_range, self_energy.real, 
             yerr=stdv * self_energy.real_sigma, label =r"$\Sigma'(E)$")
-ax.set_xlabel(r'$E-\mu$ (eV)'); ax.set_ylabel(r'$\Sigma(E)$ (eV)')
+ax.set_xlabel(r'$E-\mu$ (eV)'); ax.set_ylabel(r"$\Sigma'(E), -\Sigma''(E)$ (eV)")
 
 plt.legend(); plt.show()
-```
-
-```{python}
-
 ```
 
 ```{python}
@@ -266,21 +251,13 @@ plt.legend(); plt.show()
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
-ax.plot(self_energy.peak_positions, self_energy.enel_range, color='tab:blue', linewidth=2)
+from xarpes.constants import stdv
+
+ax.errorbar(self_energy.peak_positions, self_energy.enel_range, 
+            xerr=stdv * self_energy.peak_positions_sigma,
+           markersize=2, color='tab:blue', label=self_energy.label)
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
-```
-
-```{python}
-
-```
-
-```{python}
-
-```
-
-```{python}
-
 ```
 
 ```{python}
@@ -304,10 +281,7 @@ fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=0, ax=ax)
 ```
 
 ```{python}
-# %matplotlib widget
-
-# fig = plt.figure(figsize=(8, 6))
-# ax = fig.gca()
+# Fit without showing output
 
 fig = mdc2.fit_selection(distributions=guess_dists2, show=False, fig_close=True)
 ```
@@ -322,9 +296,15 @@ self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_
 fig = plt.figure(figsize=(8, 5))
 ax = fig.gca()
 
-ax.plot(self_left.peak_positions, self_left.enel_range, color='tab:red', linewidth=2)
+from xarpes.constants import stdv
 
-ax.plot(self_energy.peak_positions, self_energy.enel_range, color='tab:blue', linewidth=2)
+ax.errorbar(self_left.peak_positions, self_left.enel_range, 
+            xerr=stdv * self_left.peak_positions_sigma,
+           markersize=2, color='tab:red', label=self_left.label)
+
+ax.errorbar(self_energy.peak_positions, self_energy.enel_range, 
+            xerr=stdv * self_energy.peak_positions_sigma,
+           markersize=2, color='tab:blue', label=self_energy.label)
 
 fig = bmap.plot(abscissa='momentum', ordinate='electron_energy', ax=ax)
 ```
